# domain_status

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AI_AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_EXAMPLE.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CLAUDE.md  CODEBASE_QUALITY.md  CODE_HYGIENE_SUMMARY.md  CODE_REVIEW.md  CONTRIBUTING.md  COVERAGE_SETUP.md  Cargo.toml  DATABASE.md  LICENSE-MIT  PARITY_FINDINGS.md  PARITY_ISSUES.md  PERFORMANCE_SETTINGS_ANALYSIS.md  PHASE4_REFACTORING_PLAN.md  PROGRESS.md  QUALITY_ASSESSMENT.md  QUERIES.md  README.md  RELEASES.md  SECURITY.md  SERIALIZATION_DESIGN.md  TECHNICAL_DEBT_REVIEW.md  TESTING.md  TEST_ORGANIZATION.md  build.rs  business_urls.txt  codecov.yml  compare_detection.go  compare_parity.sh  deny.toml  go.mod  (+15 more)
.cargo/: audit.toml  config.toml
.fingerprints_cache/: metadata.json  technologies.json
.github/: dependabot.yml  secret_scanning.yml
.github/workflows/: ci.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: lib.rs
config/: gitleaks.overrides.toml  gitleaks.toml
config_examples/: domain_status.example.toml
docs/: ARCHITECTURE.md  CI_ACTIONS.md  CODE_REVIEW_ISSUES.md  DEVELOPER_BOOTSTRAP.md  ERROR_HANDLING.md  EXIT_CODES.md  OSINT_GAP_ANALYSIS.md  PRODUCTION_HARDENING.md  SECRETS_EVALUATION_ALT_DB.md  SECRET_DETECTION_AND_FALSE_POSITIVES.md  SECRET_RETENTION_AUDIT.md  SECURITY_REMEDIATION_ROADMAP.md  SUPPLY_CHAIN_POSTURE.md  THREAT_MODEL_UNTRUSTED_INPUT.md  error-handling-policy.md
docs/adr/: 0001-fingerprint-ruleset-sourcing-and-caching.md  0002-enrichment-failure-policy.md  0003-tls-capture-versus-validation.md  0004-sqlite-first-analytical-storage.md  0005-no-javascript-fingerprinting.md  0006-local-only-status-server.md
migrations/: 0001_create_url_status.sql  0001_initial_schema.sql  0002_add_indexes.sql  0002_url_txt_records_unique.sql  0003_alter_url_status_nullable_unique.sql  0003_cascade_runs.sql  0004_add_redirect_chain.sql  0004_add_skipped_urls_to_runs.sql  0005_add_technologies.sql  0005_idempotent_url_status_per_run.sql  0006_add_fingerprints_metadata.sql  0006_osint_signals.sql  0006_osint_tier1.sql  0007_add_dns_records.sql  0007_osint_tier2.sql  0007_osint_tier3.sql  0008_add_tls_enhancements.sql  0008_jwt_claims.sql  0009_add_run_id.sql  0010_normalize_tables.sql  0011_add_runs_table.sql  0012_remove_json_columns.sql  0013_remove_deprecated_fingerprint_fields.sql  0014_normalize_security_headers.sql  0015_normalize_oids_and_redirect_chain.sql  0016_add_geoip_table.sql  0017_add_geoip_version_to_runs.sql  0018_add_structured_data_table.sql  0019_add_http_headers_table.sql  0020_add_social_media_links_table.sql  0021_remove_linkedin_slug.sql  0022_add_security_warnings_table.sql  0023_add_whois_table.sql  0024_add_url_failures_table.sql  0025_add_url_partial_failures_table.sql  0026_add_certificate_sans_table.sql  0027_add_analytics_ids_table.sql  0028_add_elapsed_seconds_to_runs.sql  0029_add_version_to_runs.sql  0030_add_technology_version.sql  (+3 more)
scripts/: comprehensive_test.sh
src/: adaptive_rate_limiter.rs  cli.rs  clock.rs  config.rs  database.rs  dns.rs  domain.rs  error_handling.rs  exit_codes.rs  html.rs  http.rs  initialization.rs  item_counting.rs  lib.rs  main.rs  models.rs  per_domain_limiter.rs  runtime_metrics.rs  security.rs  status_server.rs  tech_detection.rs  tests.rs  tls.rs  user_agent.rs  utils.rs
src/adaptive_rate_limiter/: limiter.rs  mod.rs  window.rs
src/app/: logging.rs  mod.rs  shutdown.rs  statistics.rs  url.rs
src/config/: constants.rs  headers.rs  merge.rs  mod.rs  types.rs
src/dns/: extract.rs  mod.rs  records.rs  resolution.rs  tests.rs
src/domain/: mod.rs  tests.rs
src/error_handling/: categorization.rs  error_ext.rs  mod.rs  reqwest_ext.rs  resolve_ext.rs  stats.rs  types.rs
src/export/: csv.rs  jsonl.rs  mod.rs  parquet.rs  queries.rs  row.rs  types.rs
src/fetch/: context.rs  enrichment.rs  external_scripts.rs  favicon.rs  mod.rs  redirects.rs  request.rs  tests.rs  utils.rs
src/fetch/dns/: additional.rs  mod.rs  tls_dns.rs  types.rs
src/fetch/handler/: mod.rs  request.rs  response.rs
src/fetch/record/: builder.rs  detection.rs  mod.rs  preparation.rs  queue.rs
src/fetch/response/: extract.rs  html.rs  mod.rs  types.rs
src/fingerprint/: mod.rs  models.rs  patterns.rs
src/fingerprint/detection/: body.rs  cookies.rs  headers.rs  (+4 more)
src/geoip/: extract.rs  lookup.rs  metadata.rs  mod.rs  types.rs
src/initialization/: client.rs  log_filters.rs  logger.rs  mod.rs  rate_limiter.rs  resolver.rs
src/main/: mod.rs  statistics.rs  url.rs
src/parse/: analytics.rs  contact.rs  gitleaks.rs  html.rs  jwt.rs  mod.rs  secrets.rs  social.rs  structured.rs  tests.rs
src/run/: finalize.rs  init.rs  mod.rs  resources.rs  task.rs
src/security/: analysis.rs  mod.rs  redaction.rs  safe_resolver.rs  types.rs  url_validation.rs
src/status_server/: error.rs  mod.rs  types.rs
src/storage/: batch.rs  circuit_breaker.rs  failure.rs  insert.rs  migrations.rs  mod.rs  models.rs  pool.rs  test_helpers.rs
src/tls/: extract.rs  mod.rs
src/utils/: io_context.rs  mod.rs  process.rs  retry.rs  sanitize.rs  selector.rs  tests.rs  timing.rs
src/whois/: cache.rs  mod.rs  parse.rs  types.rs
tests/: FINGERPRINT_TEST_COVERAGE.md  TEST_COVERAGE_SUMMARY.md  cli_parsing.rs  db_pool_timeout_bug.rs  error_messages.rs  exit_codes.rs  export_csv.rs  fixtures_integration.rs  helpers.rs  http_timeout_bug.rs  input_parsing.rs  integration_test.rs  panic_safety.rs  resiliency_break_it.rs  resiliency_cancellation.rs  snapshot_export.rs  stdin_input.rs  stress_concurrency_mismatch.rs  stress_database_scale.rs  stress_dns_rebinding.rs  stress_dns_tunneling.rs  stress_header_bomb.rs  stress_redirect_resource.rs  stress_whois_cache_explosion.rs  test_run_scan_integration.rs  test_run_scan_integration_note.txt  verify_p0_fixes.rs  whois_timeout_bug.rs
tests/fixtures/: mod.rs
tests/snapshots/: snapshot_export__snapshot_cli_help.snap  snapshot_export__snapshot_csv_export_minimal.snap  snapshot_export__snapshot_jsonl_export_minimal.snap
(+63 files in other folders)
