[package]
name = "domain_status"
version = "0.1.5"
edition = "2021"
rust-version = "1.85"
authors = ["Alex Woolford <alex@woolford.io>"]
description = "Concurrent URL status checker that captures comprehensive metadata in SQLite."
license = "MIT"
repository = "https://github.com/alexwoolford/domain_status"
homepage = "https://github.com/alexwoolford/domain_status"
documentation = "https://docs.rs/domain_status"
keywords = ["url", "scraper", "domain", "status", "monitoring"]
categories = ["web-programming", "command-line-utilities", "development-tools"]

[lib]
name = "domain_status"
path = "src/lib.rs"

[dependencies]
# HTTP requests and async (use rustls only; drop native-tls)
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate"] }
http = "^1.4" # Updated for wappalyzer compatibility
tokio = { version = "^1", features = ["full"] }
tokio-util = "^0.7"
tokio-retry = "^0.3"
futures = "^0.3"
rustls = "^0.23"
webpki-roots = "^1.0"
x509-parser = "^0.18"
tokio-rustls = "^0.26"
hickory-resolver = "^0.25"

# Database related
sqlx = { version = "^0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Scraping and URL handling
scraper = "^0.24"
url = "^2.5"
serde_json = "^1.0"

# CLI and error handling
clap = { version = "^4.5", features = ["derive"] }
anyhow = "^1.0"
thiserror = "^2.0"

# Logging
log = "^0.4"
env_logger = "^0.11"
colored = "^3.0"

# Other
chrono = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"
serde = { version = "^1.0", features = ["derive"] }
regex = "^1.12"
once_cell = "^1.21"
tempfile = "^3.23"
maxminddb = "^0.27"
flate2 = "^1.1"
tar = "^0.4"
dotenvy = "^0.15"
whois-service = { version = "^0.1", default-features = false }
axum = "^0.8"
include_dir = "^0.7"
# Public Suffix List for domain extraction - more popular and actively maintained than tldextract
# No idna dependency, better performance, auto-updates daily
psl = "^2.1"
# Note: With rust-version = "1.85", edition 2024 is available
# No need to constrain base64ct or home - newer versions will work

[dev-dependencies]
httptest = "^0.16"
