[package]
name = "domain_status"
version = "0.1.13"
edition = "2021"
rust-version = "1.85"
authors = ["Alex Woolford <alex@woolford.io>"]
description = "Concurrent URL status checker that captures comprehensive metadata in SQLite."
license = "MIT"
repository = "https://github.com/alexwoolford/domain_status"
homepage = "https://github.com/alexwoolford/domain_status"
documentation = "https://docs.rs/domain_status"
keywords = ["url", "scraper", "domain", "status", "monitoring"]
categories = ["web-programming", "command-line-utilities", "development-tools"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[lints.clippy]
# === Correctness (deny to prevent regressions) ===
cast_possible_truncation = "deny"        # usize→u32, u64→u32 truncation
float_cmp = "deny"                       # Direct float equality checks
duration_subsec = "deny"                 # Unchecked duration subtraction

# === Correctness (warn) ===
cast_precision_loss = "warn"             # usize→f64, i64→f64 precision loss
cast_sign_loss = "warn"                  # i32→u32 sign loss

# === Performance ===
needless_pass_by_value = "warn"          # Unnecessary clones in parameters
clone_on_copy = "warn"                   # Clone on Copy types
unnecessary_wraps = "warn"               # Functions always return Ok

# === Maintainability ===
too_many_lines = "warn"                  # Functions >100 lines
cognitive_complexity = "warn"            # High cyclomatic complexity

# === Pedantic (phase 1) ===
must_use_candidate = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

# === Pedantic (phase 2) – enable as warn in follow-up PR after fixing doc/casts ===
cast_lossless = "allow"
default_trait_access = "allow"
doc_markdown = "allow"
explicit_iter_loop = "allow"

# === Allow noisy / optional ===
missing_errors_doc = "allow"             # Not critical
module_name_repetitions = "allow"        # Common in Rust
similar_names = "allow"                  # Too strict

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "domain_status"
path = "src/lib.rs"

[dependencies]
# HTTP requests and async (use rustls only; drop native-tls)
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "stream"] }
tokio = { version = "^1", features = ["full", "test-util"] }
tokio-util = "^0.7"
tokio-retry = "^0.3"
futures = "^0.3"
rustls = "^0.23"
webpki-roots = "^1.0"
x509-parser = "^0.18"
tokio-rustls = "^0.26"
hickory-resolver = "^0.25"

# Database related
sqlx = { version = "^0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Scraping and URL handling
scraper = "^0.25"
url = "^2.5"
serde_json = "^1.0"

# CLI and error handling
clap = { version = "^4.5", features = ["derive"] }
anyhow = "^1.0"
thiserror = "^2.0"

# Logging
log = "^0.4"
env_logger = "^0.11"
colored = "^3.0"
indicatif = "0.18.4"

# Other
toml = { version = "^0.8", features = ["preserve_order"] }
chrono = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"
serde = { version = "^1.0", features = ["derive"] }
csv = "^1.3"
regex = "^1.12"
moka = { version = "^0.12", features = ["sync"] }
tempfile = "^3.24"
maxminddb = "^0.27"
flate2 = "^1.1"
tar = "^0.4"
dotenvy = "^0.15"
whois-service = { version = "0.2.1", default-features = false }
axum = "^0.8"
include_dir = "^0.7"
# Public Suffix List for domain extraction - more popular and actively maintained than tldextract
# No idna dependency, better performance, auto-updates daily
psl = "^2.1"
sha2 = "^0.10"
base64 = "^0.22"
murmur3 = "^0.1"
# Parquet export (columnar format for analytics)
arrow = { version = "^58", default-features = false }
parquet = { version = "^58", default-features = false, features = ["arrow", "snap"] }
# Note: With rust-version = "1.85", edition 2024 is available
# No need to constrain base64ct or home - newer versions will work

# Pin whois-service to vendored build (reqwest 0.12) to eliminate rustls-pemfile (RUSTSEC-2025-0134)
[patch.crates-io]
whois-service = { path = "vendor/whois-service" }

[dev-dependencies]
httptest = "^0.16"
proptest = "^1.4"          # Property-based testing
insta = { version = "^1.38", features = ["yaml"] }  # Snapshot/golden testing
pretty_assertions = "^1.4"  # Better test output
assert_cmd = "^2.0"         # CLI testing
wiremock = "^0.6"           # HTTP mocking for integration tests
tower = "0.5.3"
rcgen = "0.14.7"
