[workspace]
members = ["cli"]

[package]
name = "domain_status"
version = "0.1.21"
edition = "2021"
rust-version = "1.85"
authors = ["Alex Woolford <alex@woolford.io>"]
description = "Concurrent URL status checker that captures comprehensive metadata in SQLite."
license = "MIT"
repository = "https://github.com/alexwoolford/domain_status"
homepage = "https://github.com/alexwoolford/domain_status"
documentation = "https://docs.rs/domain_status"
keywords = ["url", "scraper", "domain", "status", "monitoring"]
categories = ["web-programming", "command-line-utilities", "development-tools"]

[lints.rust]
non_ascii_idents = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[lints.clippy]
# === Correctness (deny to prevent regressions) ===
cast_possible_truncation = "deny"        # usize→u32, u64→u32 truncation
float_cmp = "deny"                       # Direct float equality checks
duration_subsec = "deny"                 # Unchecked duration subtraction

# === Correctness (deny) ===
cast_precision_loss = "deny"             # usize→f64, i64→f64 precision loss
cast_sign_loss = "deny"                  # i32→u32 sign loss

# === Performance ===
needless_pass_by_value = "deny"          # Unnecessary clones in parameters
clone_on_copy = "deny"                   # Clone on Copy types
unnecessary_wraps = "deny"               # Functions always return Ok

# === Maintainability ===
too_many_lines = "deny"                  # Functions >100 lines
cognitive_complexity = "deny"            # High cyclomatic complexity

# === Pedantic (phase 1) ===
must_use_candidate = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"

# === Pedantic (phase 2) ===
cast_lossless = "deny"
default_trait_access = "deny"
doc_markdown = "deny"
explicit_iter_loop = "deny"
undocumented_unsafe_blocks = "warn"

# === Allow noisy / optional ===
missing_errors_doc = "warn"              # Next ratchet: fix then promote to deny
module_name_repetitions = "allow"        # Common in Rust
similar_names = "allow"                  # Too strict

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "domain_status"
path = "src/lib.rs"

[features]
default = []
# Internal: exposes low-level insert helpers (`insert_url_record`,
# `UrlRecordInsertParams`) for the crate's own integration tests under
# `tests/`. Not a stable public API — never enable in downstream production
# code. Run the affected tests with `cargo test --features test-utils`
# (already covered by `just test` / `just ci` / CI's `--all-features`).
test-utils = []

# Integration tests that drive the low-level insert pipeline directly.
# `required-features` makes `cargo test` skip them silently (rather than
# fail to compile) when the `test-utils` feature isn't enabled.
[[test]]
name = "resiliency_cancellation"
path = "tests/resiliency_cancellation.rs"
required-features = ["test-utils"]

[[test]]
name = "resiliency_break_it"
path = "tests/resiliency_break_it.rs"
required-features = ["test-utils"]

[[test]]
name = "db_pool_timeout_bug"
path = "tests/db_pool_timeout_bug.rs"
required-features = ["test-utils"]

[[test]]
name = "stress_concurrency_mismatch"
path = "tests/stress_concurrency_mismatch.rs"
required-features = ["test-utils"]

[[test]]
name = "stress_database_scale"
path = "tests/stress_database_scale.rs"
required-features = ["test-utils"]

[dependencies]
# HTTP requests and async (use rustls only; drop native-tls)
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "stream"] }
tokio = { version = "^1", features = ["full"] }
tokio-util = "^0.7"
tokio-retry = "^0.3"
futures = "^0.3"
rustls = "^0.23"
x509-parser = "^0.18"
tokio-rustls = "^0.26"
hickory-resolver = "^0.25"

# Database related
sqlx = { version = "^0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Scraping and URL handling
scraper = "^0.25"
url = "^2.5"
serde_json = "^1.0"

# CLI and error handling (CLI definition lives in domain_status_cli for single source of truth)
domain_status_cli = { path = "cli", version = "0.1.21" }
clap = { version = "^4.6", features = ["derive", "env"] }
clap_complete = "^4.6"
clap_mangen = "^0.2"
clap-verbosity-flag = "3.0"
anyhow = "^1.0"
thiserror = "^2.0"

# Logging
log = "^0.4"
env_logger = "^0.11"
colored = "^3.0"
indicatif = "0.18.4"

# Other
toml = { version = "^0.8", features = ["preserve_order"] }
chrono = "^0.4"
strum = "^0.27"
strum_macros = "^0.27"
enum-map = "^2.7"
serde = { version = "^1.0", features = ["derive"] }
csv = "^1.3"
regex = "^1.12"
moka = { version = "^0.12", features = ["sync"] }
tempfile = "^3.27"
maxminddb = "^0.27"
flate2 = "^1.1"
tar = "^0.4"
dotenvy = "^0.15"
config = { version = "0.14", default-features = false, features = ["toml"] }
whois-service = { version = "0.2.1", default-features = false }
axum = "^0.8"
include_dir = "^0.7"
# Public Suffix List for domain extraction - more popular and actively maintained than tldextract
# No idna dependency, better performance, auto-updates daily
psl = "^2.1"
sha2 = "^0.10"
base64 = "^0.22"
murmur3 = "^0.1"
# Parquet export (columnar format for analytics)
arrow = { version = "^58", default-features = false }
parquet = { version = "^58", default-features = false, features = ["arrow", "snap"] }
# Note: With rust-version = "1.85", edition 2024 is available
# No need to constrain base64ct or home - newer versions will work

# Pin whois-service to vendored build (reqwest 0.12) to eliminate rustls-pemfile (RUSTSEC-2025-0134)
[patch.crates-io]
whois-service = { path = "vendor/whois-service" }

[build-dependencies]
clap = { version = "^4.6", features = ["derive"] }
domain_status_cli = { path = "cli", version = "0.1.21" }
clap_complete = "^4.6"
clap_mangen = "^0.2"

[dev-dependencies]
tokio = { version = "^1", features = ["test-util"] }
httptest = "^0.16"
proptest = "^1.11"          # Property-based testing
insta = { version = "^1.38", features = ["yaml"] }  # Snapshot/golden testing
pretty_assertions = "^1.4"  # Better test output
assert_cmd = "^2.0"         # CLI testing
assert_fs = "^1.1"           # Temp dirs and file layout for tests
rstest = "^0.21"             # Parameterized tests and fixtures
wiremock = "^0.6"           # HTTP mocking for integration tests
tower = "0.5.3"
rcgen = "0.14.7"
